tests/baselines/reference/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.errors.txt
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(2,18): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(3,9): error TS6132: Variable 'unused' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(4,14): error TS6132: Variable 'maker' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(4,20): error TS6133: Parameter 'child' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts(5,13): error TS6132: Variable 'unused2' has never been used.


==== tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionDeclaration1.ts (5 errors) ====
    
    function greeter(person: string, person2: string) {
                     ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
        function maker(child: string): void {
                 ~~~~~
!!! error TS6132: Variable 'maker' has never been used.
                       ~~~~~~~~~~~~~
!!! error TS6133: Parameter 'child' has never been used.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6132: Variable 'unused2' has never been used.
        }
        person2 = "dummy value";
    }